--- a/ChinhQuyen/Chính Quyền - Đầu Tư_fix.html
+++ b/ChinhQuyen/Chính Quyền - Đầu Tư_fix.html
@@ -126,7 +126,7 @@
               <div class="text-center">
                 <button
                   class="btn-xemthem-cq"
-                  onclick="location.href='/tin-tuc-su-kien-3'"
+                  onclick="location.href='/Đầu-tư'"
                 >
                   Xem thêm
                 </button>
