--- a/PhanVanMai/Chỉ Đạo Chủ Tịch PVM.html
+++ b/PhanVanMai/Chỉ Đạo Chủ Tịch PVM.html
@@ -1,11 +1,10 @@
-
 <#assign dateFormatDay = "dd" />
 <#assign monthFormatDay = "MM" />
 <#assign yearFormatDay = "yyyy" />
 <#assign dateFormatTime = "HH:mm" />
 <#assign indexLocal = 0/>
 
-<div class="bg-F8F9FA mr-15pt box-shadow-right-15pt">
+<div class="bg-F8F9FA mr-15pt box-shadow-right-15pt wrapper-chi-dao-pvm">
     <div class="row m-0">
         <div class="baner-content col-12 col-md-12 pb-0 banner-cd-pvm row m-0">
             <!-- Giới thiệu Chỉ đạo -->
@@ -22,7 +21,7 @@
                         </div>
                     </div>
                     <h2 class="activities-title-pct">CHỈ ĐẠO</h2>
-                    <a href="javascript:void(0)" class="view-more-pct"
+                    <a href="/web/ct-phan-van-mai/chi-dao" class="view-more-pct"
                     >Xem thêm <i class="fa fa-arrow-right"></i
                         ></a>
                 </div>
