--- a/ChinhQuyen/tabs_tantest.html
+++ b/ChinhQuyen/tabs_tantest.html
@@ -1,4 +1,5 @@
 <div class="d-flex mt-3 container">
+  <!-- Vòng lặp tạo các tab -->
   [#list 0..configuration.numberOfTabs-1 as i]
   <button
     class="nav-link h-100 nav-link-gt-chiquyen button thuong-truc-duong-nhiem pt-0 pb-0 pl-0"
@@ -19,11 +20,30 @@
     </div>
   </button>
 
+  <!-- Hiển thị dấu phân cách cho tab đầu tiên -->
   [#if i == 0]
   <span class="ct-sp pr-3">|</span>
   [/#if] [/#list]
+  <!-- Phần "Xem thêm" -->
+  <div
+    class="view-more-cddh"
+    id="view-more-cddh"
+    style="display: none; margin-left: auto"
+  >
+    <a href="/chỉ-đạo-điều-hànhnew"
+      >Xem thêm <i class="fa fa-arrow-right"></i
+    ></a>
+  </div>
 </div>
+<div
+  class="view-more-cddh-small"
+  style="display: none; margin-left: auto; text-align: end; margin-right: 1rem"
+>
+  <a href="/chỉ-đạo-điều-hànhnew">Xem thêm <i class="fa fa-arrow-right"></i></a>
+</div>
+
 <div class="tab-panel d-block custom-nav">
+  <!-- Vòng lặp tạo các tab panel -->
   [#list 0..configuration.numberOfTabs-1 as i]
   <div
     aria-labelledby="tab${i+1}"
@@ -38,10 +58,54 @@
   [/#list]
 </div>
 <style>
+  .view-more-cddh-small {
+    display: none;
+  }
+
+  .view-more-cddh-small a {
+    color: #db7100;
+    text-decoration: none;
+    font-weight: bold;
+    align-items: center;
+    gap: 8px;
+  }
+
+  @media (min-width: 992px) {
+    .view-more-cddh-small {
+      display: none !important;
+    }
+    .view-more-cddh {
+    }
+  }
+  @media (max-width: 991px) {
+    .view-more-cddh-small {
+      text-align: end;
+      margin-right: 1rem;
+    }
+    .view-more-cddh {
+      display: none !important;
+    }
+  }
+
+  .nav-link-gt-chiquyen {
+    font-size: clamp(14px, 4vw, 32px);
+  }
+  .view-more-cddh {
+    margin-left: auto;
+  }
+
+  .view-more-cddh a {
+    color: #db7100;
+    text-decoration: none;
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+    gap: 8px;
+  }
   .button {
     text-align: left !important;
     font-family: Roboto;
-    font-size: 32px;
+    font-size: clamp(14px, 4vw, 32px);
     font-weight: 700;
     line-height: 37.5px;
     letter-spacing: 0.15000000596046448px;
@@ -84,6 +148,22 @@
       '[data-fragment-namespace="' + fragmentNamespace + '"].tab-panel-item'
     )
   );
+  const viewMoreElement = fragmentElement.querySelector(".view-more-cddh");
+  const viewMoreElementSmall = fragmentElement.querySelector(
+    ".view-more-cddh-small"
+  );
+
+  // Hàm ẩn/hiện phần tử view-more-cddh dựa trên tab được chọn
+  function toggleViewMore(index) {
+    if (index === 1) {
+      // Tab thứ hai
+      viewMoreElement.style.display = "block";
+      viewMoreElementSmall.style.display = "block";
+    } else {
+      viewMoreElement.style.display = "none";
+      viewMoreElementSmall.style.display = "none";
+    }
+  }
 
   function activeTab(item) {
     tabItems.forEach(function (tabItem) {
@@ -116,6 +196,9 @@
       activeTab(currentTarget, i);
       activeTabPanel(tabPanelItems[i]);
 
+      // Gọi hàm toggleViewMore để hiển thị hoặc ẩn phần tử view-more-cddh
+      toggleViewMore(i);
+
       this.tabIndex = i;
     }
   }
@@ -138,6 +221,8 @@
           activeTabPanel(item);
         }
       });
+      // Đảm bảo trạng thái hiển thị ban đầu cho view-more-cddh
+      toggleViewMore(0); // Tab đầu tiên (index 0) không hiển thị
     } else {
       tabItemSelected = tabItems[this.tabIndex];
       tabItems.forEach(function (item, i) {
@@ -149,6 +234,7 @@
       tabPanelItems.forEach(function () {
         activeTabPanel(tabPanelItems[this.tabIndex]);
       });
+      toggleViewMore(this.tabIndex); // Hiển thị đúng trạng thái dựa trên tabIndex
     }
   }
 
