--- a/PhanVanMai/Chuyên trang mẫu danh sách tin khác.html
+++ b/PhanVanMai/Chuyên trang mẫu danh sách tin khác.html
@@ -149,7 +149,7 @@
     }
     .hoat-dong-khac-tin-khac {
         height: 100%;
-        background: #FAFAFA;
+        /*background: #FAFAFA;*/
         padding: 15px;
         display:block;
     }
@@ -248,9 +248,9 @@
         overflow: hidden;
         text-overflow: ellipsis;
     }
-        .limit-3-lines-desc {
+    .limit-3-lines-desc {
         display: -webkit-box;
-        -webkit-line-clamp: 3;
+        -webkit-line-clamp: 2;
         -webkit-box-orient: vertical;
         overflow: hidden;
         text-overflow: ellipsis;
@@ -297,7 +297,7 @@
                             </div>
                             <div class="text-left limit-tin-descc-news limit-3-lines-desc description-color d-mobile-none">${description}</div>
                             <p class="text-ngaythang d-flex align-items-center justify-content-between text-ngaythang-pct-tin-khac"
-                               style="position: absolute; bottom: 0; width: 85%;">
+                               style="position: absolute; bottom: -10px; width: 85%;">
                                 <span  style="color: #686868;">${createTime} | ${createDay}/${createMonth}/${createYear}</span></p>
                         </div>
                     </div>
