--- a/PhanVanMai/Chuyên trang mẫu danh sách tin khác_fix.html
+++ b/PhanVanMai/Chuyên trang mẫu danh sách tin khác_fix.html
@@ -110,6 +110,11 @@
         font-weight: 400;
         line-height: normal;
     }
+    .text-ngaythang-pct-tin-khac{
+        position: absolute;
+    bottom: -10px;
+    width: 85%;
+    }
     @media only screen and (max-width: 576px) {
         .media {
             flex-direction: column;
@@ -149,7 +154,7 @@
     }
     .hoat-dong-khac-tin-khac {
         height: 100%;
-        background: #FAFAFA;
+        /*background: #FAFAFA;*/
         padding: 15px;
         display:block;
     }
@@ -172,7 +177,7 @@
         color: #FFF !important;
     }
     .img-tin-hd-khac {
-        width: 213px !important;
+        width: 100% !important;
         height: 155px;
         object-fit: cover;
         flex: none;
@@ -248,12 +253,54 @@
         overflow: hidden;
         text-overflow: ellipsis;
     }
-        .limit-3-lines-desc {
+    .limit-3-lines-desc {
         display: -webkit-box;
         -webkit-line-clamp: 2;
         -webkit-box-orient: vertical;
         overflow: hidden;
         text-overflow: ellipsis;
+    }
+    @media screen and (max-width: 426px) {
+        .hoat-dong-khac-tin-khac{
+            margin-left: 15px;
+            margin-right: 15px;
+        }
+        .text-ngaythang-pct-tin-khac{
+            position: absolute;
+            bottom: -12px;
+            width: 85%;
+        }
+        .limit-3-lines-desc{
+            line-height: 1.3;
+        }
+        .hoat-dong-khac-tin-khac{
+            padding-bottom: 30px;
+
+        }
+        .img-hdk-ct{
+            padding-right: 15px !important;
+        }
+    }
+    @media screen and (min-width: 427px) and (max-width: 768px) {
+        .hoat-dong-khac-tin-khac{
+            margin-left: 15px;
+            margin-right: 15px;
+        }
+        .text-ngaythang-pct-tin-khac{
+            position: absolute;
+            bottom: -12px;
+            width: 85%;
+        }
+        .limit-3-lines-desc{
+            line-height: 1.3;
+        }
+        .hoat-dong-khac-tin-khac{
+            padding-bottom: 30px;
+
+        }
+        .img-hdk-ct{
+            padding-right: 15px !important;
+        }
     }
 </style>
 <#assign dateFormatDay = "dd" />
@@ -287,18 +334,22 @@
                 <#assign smallImageUrl = "/documents/20123/41696/cover-emty-img.jpg" >
             </#if>
             <div class="img-hover mg-b-24">
-                <a href="${viewURL}" class="d-flex w-100 same-height img-hover">
-                    <img id="tin-slide-img-left" class="tin-slide-img-left img-34-left img-tin-hd-khac"
-                         src="${smallImageUrl}" alt="" width="100%">
-                    <div class="limit-tin-desc-news-3 p-0 title-tin-hd-khac">
-                        <div class="hoat-dong-khac-tin-khac hd-khac-tin-nho">
-                            <div class="limit-tin-desc-2 main-color-pct-tin-khac">
-                                <p class="makeshortnews asset-publisher-title font-merri mb-1 font-weight-bold mb-2 limit-tin-desc-2 limit-2-lines">${title}</p>
+                <a href="${viewURL}" class=" w-100 same-height img-hover">
+                    <div class="row">
+                        <div class="col-12 col-md-3 pr-0 img-hdk-ct">
+                            <img id="tin-slide-img-left" class=" tin-slide-img-left img-34-left img-tin-hd-khac"
+                        src="${smallImageUrl}" alt="" width="100%">
+                        </div>
+                        <div class="col-12 col-md-9 limit-tin-desc-news-3 p-0 title-tin-hd-khac">
+                            <div class="hoat-dong-khac-tin-khac hd-khac-tin-nho">
+                                <div class="limit-tin-desc-2 main-color-pct-tin-khac">
+                                    <p class="makeshortnews asset-publisher-title font-merri mb-1 font-weight-bold mb-2 limit-tin-desc-2 limit-2-lines">${title}</p>
+                                </div>
+                                <div class="text-left limit-tin-descc-news limit-3-lines-desc description-color d-mobile-none">${description}</div>
+                                <p class="text-ngaythang d-flex align-items-center justify-content-between text-ngaythang-pct-tin-khac"
+                                    >
+                                    <span  style="color: #686868;">${createTime} | ${createDay}/${createMonth}/${createYear}</span></p>
                             </div>
-                            <div class="text-left limit-tin-descc-news limit-3-lines-desc description-color d-mobile-none">${description}</div>
-                            <p class="text-ngaythang d-flex align-items-center justify-content-between text-ngaythang-pct-tin-khac"
-                               style="position: absolute; bottom: -10px; width: 85%;">
-                                <span  style="color: #686868;">${createTime} | ${createDay}/${createMonth}/${createYear}</span></p>
                         </div>
                     </div>
                 </a>
@@ -307,7 +358,7 @@
     </#list>
 </div>
 
-<div class="pagination-pct-tin-khac">
+<!-- <div class="pagination-pct-tin-khac">
     <a href="#" class="pagination-item-pct-tin-khac pagination-arrow-pct-tin-khac">&lt;</a>
     <a href="#" class="pagination-item-pct-tin-khac active">1</a>
     <a href="#" class="pagination-item-pct-tin-khac">2</a>
@@ -317,4 +368,4 @@
     <a href="#" class="pagination-item-pct-tin-khac">16</a>
     <a href="#" class="pagination-item-pct-tin-khac">17</a>
     <a href="#" class="pagination-item-pct-tin-khac pagination-arrow-pct-tin-khac">&gt;</a>
-</div>
+</div> -->
