--- a/Tin-tuc2/2711_DanhSachTinTucSuKien_3Col_fix.html
+++ b/Tin-tuc2/2711_DanhSachTinTucSuKien_3Col_fix.html
@@ -406,14 +406,14 @@
         class="tool-container d-flex justify-content-between align-items-center gap-3 flex-wrap my-4"
 >
     <div class="d-flex align-items-center gap-3">
-        <select class="custom-select" id="yearSelect">
+        <select class="custom-select" id="yearSelect" disabled>
             <option value="2024">2024</option>
             <option value="2023">2023</option>
             <option value="2022">2022</option>
             <option value="2021">2021</option>
             <option value="2020">2020</option>
         </select>
-        <select class="custom-select" id="monthSelect">
+        <select class="custom-select" id="monthSelect" disabled>
             <option value="1">1</option>
             <option value="2">2</option>
             <option value="3">3</option>
@@ -435,6 +435,7 @@
     <div class="row">
         <#if entries?has_content>
             <#list entries as curEntry>
+            <#if  curEntry?? && curEntry.getAssetRenderer()?exists>
                 <#assign
                 renderer = curEntry.getAssetRenderer()
                 className = renderer.getClassName() />
@@ -477,6 +478,7 @@
                             </div>
                         </a>
                     </div>
+                </#if>
                 </#if>
             </#list>
             <!-- <div class="row ct-paginate-wrap w-100">
