--- a/tintuc-sukien/Tin Tức Sự Kiện - Sở Ngành.html
+++ b/tintuc-sukien/Tin Tức Sự Kiện - Sở Ngành.html
@@ -75,102 +75,116 @@
     .news-category-section .view-count i {
         margin-right: 2px;
     }
+   /* Màn hình nhỏ hơn 321px */
+    @media screen and (max-width: 321px) {
+        .news-category-section .category-title {
+            font-size: 16px !important;
+            line-height: 1.2;
+        }
+        .news-category-section .view-more {
+            font-size: 10px!important;
+        }
+    }
 
+    /* Màn hình từ 322px đến 375px */
+    @media screen and (min-width: 322px) and (max-width: 375px) {
+        .news-category-section .category-title {
+            font-size: 16px !important;
+            line-height: 1.2;
+        }
+        .news-category-section .view-more {
+            font-size: 11px!important;
+        }
+    }
 
-    /* Mobile (< 425px) */
+    /* Màn hình từ 376px đến 426px */
+    @media screen and (min-width: 376px) and (max-width: 426px) {
+        .news-category-section .category-title {
+            font-size: 19px !important;
+            line-height: 1.2;
+        }
+        .news-category-section .view-more {
+            font-size: 12px!important;
+        }
+    }
     @media screen and (max-width: 426px) {
         .pt-0-mobile{
             padding-top: 0!important;
         }
+        .pb-0-mobile{
+            padding-bottom: 0!important;
+        }
+        .news-category-section .row > div {
+            margin-bottom: 30px; /* Thêm khoảng cách giữa 2 cột khi stack */
+        }
+
+        .news-category-section .category-header {
+            margin-bottom: 15px;
+        }
+
         .news-category-section .category-title {
-            font-size: 20px;
+            line-height: 1.2;
+        }
+
+
+
+        .news-category-section .news-item {
+            margin-bottom: 12px;
+            padding-bottom: 44px;
+            border-bottom: 1px solid #eee;
+            position: relative;
+            min-height: 60px;
+        }
+
+        .news-category-section .news-date {
+            min-width: 70px;
+            font-size: 13px;
+            position: absolute;
+            top: -3px;
+            left: 23px;
+        }
+
+        .news-category-section .news-content {
+            gap: 8px;
         }
 
         .news-category-section .news-title-snqh {
             font-size: 14px;
-        }
+        max-width: 86%;
+        white-space: normal;
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+        line-height: 1.3;
+        position: absolute;
+        top: 18px;
+        left: 0px;
+    }
 
-        /* Thêm styles cho news-category-section */
-        .news-category-section .row > div {
-            margin-bottom: 25px;
-        }
-
-        .news-category-section .category-header {
-            margin-bottom: 12px;
-        }
-
-        .news-category-section .category-title {
-            font-size: 18px;
-            line-height: 1.2;
-            text-transform: uppercase;
-        }
-
-        .news-category-section .view-more {
-            font-size: 13px;
-        }
-
-        .news-category-section .news-item {
-            margin-bottom: 10px;
-            padding-bottom: 10px;
-            border-bottom: 1px solid #eee;
-            flex-wrap: wrap;
-            position: relative;
-        }
-
-        .news-category-section .news-date {
-            min-width: auto;
-            font-size: 12px;
-            order: 2;
-            margin-right: 25px; /* Căn lề trái bằng với icon newspaper */
+        .news-category-section .view-count {
+            white-space: nowrap;
+            position: absolute;
+            top: 20px;
+            right: 0;
         }
 
         .news-category-section .fa-newspaper {
-            font-size: 13px;
-            order: 1;
-        }
-
-        .news-category-section .news-content {
-            width: 100%;
-            order: 3;
-            margin-top: 5px;
-            gap: 6px;
-        }
-
-        .news-category-section .news-title-snqh {
-            font-size: 13px;
-            max-width: 100%;
-            white-space: normal;
-            display: -webkit-box;
-            -webkit-line-clamp: 2;
-            -webkit-box-orient: vertical;
-            overflow: hidden;
-            line-height: 1.3;
-        }
-
-        .news-category-section .view-count {
-            font-size: 11px;
-            white-space: nowrap;
-            min-width: 50px;
-            color: #666;
+            font-size: 14px;
         }
 
         .news-category-section .fa-eye {
-            font-size: 11px;
-        }
-
-        /* Điều chỉnh khoảng cách */
-        .news-category-section .me-3 {
-            margin-right: 6px !important;
-        }
-
-        /* Điều chỉnh icon arrow trong view more */
-        .news-category-section .view-more .fa-arrow-right {
             font-size: 12px;
+        }
+
+        /* Điều chỉnh icon và khoảng cách */
+        .news-category-section .me-3 {
+            margin-right: 8px !important;
         }
     }
 
     /* Tablet (425px - 768px) */
-    @media screen and (min-width: 425px) and (max-width: 768px) {
+    @media screen and (min-width: 427px) and (max-width: 768px) {
         .pt-0-mobile{
             padding-top: 0!important;
         }
@@ -215,7 +229,7 @@
 
         .news-category-section .news-title-snqh {
             font-size: 14px;
-        max-width: 94%;
+            max-width: 86% !important;
         white-space: normal;
         display: -webkit-box;
         -webkit-line-clamp: 2;
@@ -230,10 +244,9 @@
         .news-category-section .view-count {
             font-size: 12px;
         white-space: nowrap;
-        min-width: 60px;
         position: absolute;
         top: 20px;
-        right: -41px;
+        right: 0;
         }
 
         .news-category-section .fa-newspaper {
@@ -399,7 +412,7 @@
         <div class="col-lg-12 col-12">
             <div class="category-header">
                 <h2 class="category-title">SỞ NGÀNH</h2>
-                <a href="/tin-tuc-su-kien-3" class="view-more">Xem thêm <i class="fa fa-arrow-right"></i></a>
+                <a href="/tin-tuc-so-nganh" class="view-more">Xem thêm <i class="fa fa-arrow-right"></i></a>
             </div>
             <div class="news-list">
                 <#assign dateFormatDay = "dd" />
@@ -409,38 +422,40 @@
         <#assign indexLocal = 0/>
         <#if entries?has_content>
             <#list entries as curEntry>
-                <#assign
-                renderer = curEntry.getAssetRenderer()
-                className = renderer.getClassName() />
-                <#if className == "com.liferay.journal.model.JournalArticle" && curEntry.getAvailableLanguageIds()?seq_contains(locale) && indexLocal &lt; 5>
-                    <#assign
-                    title = curEntry.getTitle(locale)
-                    article = renderer.getArticle()
-                    description = article.getDescription(locale)
-                    ddmTemplateKey = article.getDDMTemplateKey()
-                    createTime = dateUtil.getDate(curEntry.getCreateDate(), dateFormatTime, locale)
-                    createDay = dateUtil.getDate(curEntry.getCreateDate(), dateFormatDay, locale)
-                    createMonth = dateUtil.getDate(curEntry.getCreateDate(), monthFormatDay, locale)
-                    createYear = dateUtil.getDate(curEntry.getCreateDate(), yearFormatDay, locale)
-                    curEntry = curEntry
-                    viewCount = curEntry.getViewCount()
-                    viewURL = "${themeDisplay.getPathFriendlyURLPublic()}${themeDisplay.getSiteGroup().getFriendlyURL()}/-/${renderer.getUrlTitle()}"
-                    indexLocal = indexLocal + 1 />
+				<#if  curEntry?? && curEntry.getAssetRenderer()?exists>
+					<#assign
+					renderer = curEntry.getAssetRenderer()
+					className = renderer.getClassName() />
+					<#if className == "com.liferay.journal.model.JournalArticle" && curEntry.getAvailableLanguageIds()?seq_contains(locale) && indexLocal &lt; 5>
+						<#assign
+						title = curEntry.getTitle(locale)
+						article = renderer.getArticle()
+						description = article.getDescription(locale)
+						ddmTemplateKey = article.getDDMTemplateKey()
+						createTime = dateUtil.getDate(curEntry.getCreateDate(), dateFormatTime, locale)
+						createDay = dateUtil.getDate(curEntry.getCreateDate(), dateFormatDay, locale)
+						createMonth = dateUtil.getDate(curEntry.getCreateDate(), monthFormatDay, locale)
+						createYear = dateUtil.getDate(curEntry.getCreateDate(), yearFormatDay, locale)
+						curEntry = curEntry
+						viewCount = curEntry.getViewCount()
+						viewURL = "${themeDisplay.getPathFriendlyURLPublic()}${themeDisplay.getSiteGroup().getFriendlyURL()}/-/${renderer.getUrlTitle()}"
+						indexLocal = indexLocal + 1 />
 
-                    <#if curEntry.getAssetRenderer().getThumbnailPath(renderRequest)??>
-                        <#assign smallImageUrl = curEntry.getAssetRenderer().getThumbnailPath(renderRequest) >
-                    <#else>
-                        <#assign smallImageUrl = "" >
-                    </#if>
-                    <div class="news-item">
-                        <i class="fa fa-newspaper-o me-3"></i>
-                        <div class="news-date">${createDay}/${createMonth}/${createYear}</div>
-                        <div class="news-content">
-                            <a href="${viewURL}" class="news-title-snqh">${title}</a>
-                            <span class="view-count"><i class="fa fa-eye me-1"></i>${viewCount}</span>
-                        </div>
-                    </div>
-                </#if>
+						<#if curEntry.getAssetRenderer().getThumbnailPath(renderRequest)??>
+							<#assign smallImageUrl = curEntry.getAssetRenderer().getThumbnailPath(renderRequest) >
+						<#else>
+							<#assign smallImageUrl = "" >
+						</#if>
+						<div class="news-item">
+							<i class="fa fa-newspaper-o me-3"></i>
+							<div class="news-date">${createDay}/${createMonth}/${createYear}</div>
+							<div class="news-content">
+								<a href="${viewURL}" class="news-title-snqh">${title}</a>
+								<span class="view-count"><i class="fa fa-eye me-1"></i>${viewCount}</span>
+							</div>
+						</div>
+					</#if>
+				</#if>
             </#list>
         </#if>
 
