--- a/tintuc-sukien/danhmuc/Tin Tức Sự Kiện - Danh Mục Tin Đăng_fix.html
+++ b/tintuc-sukien/danhmuc/Tin Tức Sự Kiện - Danh Mục Tin Đăng_fix.html
@@ -330,6 +330,10 @@
     .btn-view{
         font-size: 18px;
     }
+    .icon-prev-ttsk,
+    .icon-next-ttsk {
+        color: #ffffff;
+    } 
     /* Mobile (< 425px) */
     @media screen and (max-width: 426px) {
         .nav-bv-tin {
@@ -563,10 +567,10 @@
         <div class="slideshow-news-container position-relative">
             <!-- Thêm nút điều hướng tùy chỉnh -->
             <button class="custom-prev-btn" onclick="document.querySelector('.newsSwiper').swiper.slidePrev()">
-                <img src="/documents/39403/310714/left-arrow.svg" alt="Previous"/>
+                <i class="icon-prev-ttsk fa fa-chevron-left" ></i>
             </button>
             <button class="custom-next-btn" onclick="document.querySelector('.newsSwiper').swiper.slideNext()">
-                <img src="/documents/39403/310714/right-arrow.svg" alt="Next"/>
+                <i class="icon-next-ttsk fa fa-chevron-right" ></i>
             </button>
 
             <!-- Định nghĩa mapping cho icons -->
